Issue #3271302: Date field spacing broken when scrollbar present

--- a/styles/components/edit_form.scss
+++ b/styles/components/edit_form.scss
@@ -244,8 +244,8 @@
               }
 
               .form-element {
-                min-width: 0;
-                width: 100%;
+                min-inline-size: 0;
+                inline-size: 100%;
               }
             }
           }
