--- a/styles/layout/horizontal_toolbar.scss
+++ b/styles/layout/horizontal_toolbar.scss
@@ -144,7 +144,18 @@
 }
 
 #toolbar-item-administration-tray {
-  box-shadow: 0 0 4px rgba(t
+  box-shadow: 0 0 4px rgba(0, 0, 0, .1),
+              0 2px 6px 2px rgba(0, 0, 0, .03);
+
+  .gin--dark-mode & {
+    box-shadow: 0 0 4px rgba(0, 0, 0, .3);
+  }
+
+  .toolbar-logo {
+    display: flex;
+    block-size: 100%;
+  }
+}
 
 .toolbar-tray-horizontal ul li.menu-item--expanded ul li.menu-item--expanded,
 .toolbar-tray-horizontal .toolbar-menu:not(:first-child) li.menu-item--expanded > a:focus {
